# alltime-nfl-roster-generator

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  test_fixed.csv  test_position_scores.csv
adapters/: madden_26.yaml
data/manual_curation/: README_historical_legends.md  qb_legends.yaml  schema.yaml
data/raw/: historical_legends_pre1974.csv  players_index.csv  players_index_full.csv  players_index_playoff_test.csv  players_index_test.csv  refactored_full_index.csv  test_index.csv
data/snapshots/2025-08-24/: legend_scores_v2.csv
docs/: design.md  milestones.md
frcs/: __init__.py  models.py
pipeline/: legend_scores.py  normalize.py
scripts/: build_players_index.py  validate_curation.py
tests/: test_legend_scores.py  test_placeholder.py
