[project]
name = "madden-legends"
version = "0.1.0"
description = "All-Time Madden Legends Roster Generator"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pyarrow>=12.0",
    "pandas>=2.0",
    "pyyaml>=6.0",
    "click>=8.0",
    "requests>=2.28",
    "beautifulsoup4>=4.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "mypy>=1.0",
    "ruff>=0.5",
    "pre-commit>=3.0",
    "hypothesis>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B"]
ignore = []

[tool.mypy]
python_version = "3.11"
strict = true